# repo_artist

./: .env.example  .gitignore  COMPREHENSIVE_CODE_REVIEW.md  CR_FINDINGS.md  README.md  ROADMAP.md  gcp_key.json.example  package-lock.json  package.json  pyproject.toml  repo-artist-architecture.json  repo-artist.bat  repo-artist.sh  requirements.txt  smart_push.py  spec.md
.github/workflows/: generate_art.yml
assets/: architecture.json  hero_prompt.txt
docs/: SETUP_GUIDE.md
repo_artist/: __init__.py  config.py  core.py
scripts/: cli.py  repo_artist.py  repo_artist_setup.py  smart_push.py
templates/: generate_art.yml
tests/: manual_test_imagen.py  test_config.py  test_core_logic.py  test_e2e.py  test_image_generation.py  test_repo_artist.py  test_smart_push.py
web/backend/: api.py  auth.py  github_utils.py  main.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  ErrorBoundary.tsx  index.css
web/static/: index.html
web/static/assets/: index-COt-Ql9C.js  index-CdDlBsJX.css
